[gd_scene load_steps=10 format=3 uid="uid://dasykbl5hsifa"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_611lq"]
[ext_resource type="Texture2D" uid="uid://dvcap8s61heig" path="res://Images/Assets/Main Menu Splash/Full Splash.png" id="1_hbl0w"]
[ext_resource type="Texture2D" uid="uid://bn1enh42ac15j" path="res://Images/Assets/Main Menu Splash/MainButtonNormal.png" id="2_05kwn"]
[ext_resource type="Texture2D" uid="uid://ljku3k8pgnhx" path="res://Images/Assets/Main Menu Splash/MainButtonHover.png" id="3_6fjk0"]
[ext_resource type="FontFile" uid="uid://d44j4bpixl3m" path="res://Fonts/CustomFont.ttf" id="4_04kiq"]

[sub_resource type="LabelSettings" id="LabelSettings_b01ef"]
font_size = 53

[sub_resource type="LabelSettings" id="LabelSettings_5x7tg"]
font = ExtResource("4_04kiq")
font_size = 46
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yepfa"]
font = ExtResource("4_04kiq")
font_size = 46
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3om24"]
font = ExtResource("4_04kiq")
font_size = 46
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_611lq")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(701, 385)
scale = Vector2(0.73125, 0.716667)
texture = ExtResource("1_hbl0w")

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 42.0
offset_right = 613.0
offset_bottom = 99.0
text = "Up the Beanstalk"
label_settings = SubResource("LabelSettings_b01ef")

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 99.0
offset_top = 120.0
offset_right = 442.0
offset_bottom = 597.0

[node name="Play" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 6
texture_normal = ExtResource("2_05kwn")
texture_hover = ExtResource("3_6fjk0")

[node name="Play" type="Label" parent="ButtonsContainer/Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -19.5
offset_right = 114.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"
label_settings = SubResource("LabelSettings_5x7tg")

[node name="Settings" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 6
texture_normal = ExtResource("2_05kwn")
texture_hover = ExtResource("3_6fjk0")

[node name="Settings" type="Label" parent="ButtonsContainer/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -22.5
offset_right = 105.5
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_yepfa")

[node name="Quit" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 6
texture_normal = ExtResource("2_05kwn")
texture_hover = ExtResource("3_6fjk0")

[node name="Quit" type="Label" parent="ButtonsContainer/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = -19.5
offset_right = 43.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"
label_settings = SubResource("LabelSettings_3om24")

[connection signal="mouse_entered" from="ButtonsContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="ButtonsContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="ButtonsContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="ButtonsContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="ButtonsContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="ButtonsContainer/Quit" to="." method="_on_quit_pressed"]
